home, seattle, seoul

--- a/index.html
+++ b/index.html
@@ -1,1 +1,60 @@
-Hello World
+<!DOCTYPE html>
+<html>
+
+<head>
+    <link rel="stylesheet" href="style/style.css">
+</head>
+<header>
+    <div class="mainnav">
+        <a href="#default"><img id="nav-logo" src="assets/AudFavicon.PNG" alt=”AUD”></a>
+        <div class="dropdown">
+            <button class="dropbtn">Photography</button>
+            <div class="dropdown-content">
+                <a href="photography/sanfrancisco.html">San Francisco</a>
+                <a href="photography/japan.html">Japan</a>
+                <a href="photography/seattle.html">Seattle</a>
+                <a href="photography/newyork.html">New York</a>
+                <a href="photography/iceland.html">Iceland</a>
+                <a href="photography/quebec.html">Quebec</a>
+                <a href="photography/newzealand.html">New Zealand</a>
+                <a href="photography/england.html">England</a>
+                <a href="photography/amsterdam.html">Amsterdam</a>
+                <a href="photography/seoul.html">Seoul</a>
+                <a href="photography/hongkong.html">Hong Kong</a>
+            </div>
+        </div>
+
+    </div>
+</header>
+
+<body>
+    <div id="page-container">
+        <div id="intro">
+
+            <img id="intro-portrait" src="assets/AudPortrait.png" alt=”Audrey Kan>
+            <div id="intro-text">
+                <p>Hi, I'm Audrey!</p>
+                <p>Self-taught artist and designer.<br>
+                    Owner of Studio Aud.<br>
+                    San Francisco born and raised.
+                </p>
+                <small>This site holds a variety of content— both professional and personal— so you can learn more about
+                    who I am and
+                    what I love to do ☻</small>
+                    <br><br>
+                    <small>audreynicolekan@gmail.com</small><br>
+                    <small>@oddreeezy</small><br>
+                    <small>@studio.aud</small><br>
+                    <small>studioaud.com</small>
+            </div>
+
+
+        </div>
+        <footer id="footer">
+            <p>© Audrey Nicole Kan</p>
+        </footer>
+    </div>
+
+</body>
+
+</html>
