--- a/photography/sanfrancisco.html
+++ b/photography/sanfrancisco.html
@@ -11,17 +11,17 @@
         <div class="dropdown">
             <button class="dropbtn">Photography</button>
             <div class="dropdown-content">
-                <a href="photography/sanfrancisco.html">San Francisco</a>
-                <a href="photography/japan.html">Japan</a>
-                <a href="photography/seattle.html">Seattle</a>
-                <a href="photography/newyork.html">New York</a>
-                <a href="photography/iceland.html">Iceland</a>
-                <a href="photography/quebec.html">Quebec</a>
-                <a href="photography/newzealand.html">New Zealand</a>
-                <a href="photography/england.html">England</a>
-                <a href="photography/amsterdam.html">Amsterdam</a>
-                <a href="photography/seoul.html">Seoul</a>
-                <a href="photography/hongkong.html">Hong Kong</a>
+                <a class="active" href="sanfrancisco.html">San Francisco</a>
+                <a href="japan.html">Japan</a>
+                <a href="seattle.html">Seattle</a>
+                <a href="newyork.html">New York</a>
+                <a href="iceland.html">Iceland</a>
+                <a href="quebec.html">Quebec</a>
+                <a href="newzealand.html">New Zealand</a>
+                <a href="england.html">England</a>
+                <a href="amsterdam.html">Amsterdam</a>
+                <a class="active"  href="seoul.html">Seoul</a>
+                <a href="hongkong.html">Hong Kong</a>
             </div>
         </div>
 
