hongkong, seoul, japan

--- a/photography/seoul.html
+++ b/photography/seoul.html
@@ -39,12 +39,22 @@
             <div class="column">
               <img src="../assets/seoul/HiSeoul.jpg">
               <img src="../assets/seoul/Namsan.JPG">
-              <img src="../assets/seoul/BBQ.jpg">
-              <img src="../assets/seoul/Skyline.JPG">
-              <img src="../assets/seoul/Shrine.JPG">
-              <img src="../assets/seoul/Home.jpg">
-              <img src="../assets/seoul/Paint.jpg">
+  
+
             </div>
+
+            <div class="column">
+   
+                <img src="../assets/seoul/Skyline.JPG">
+                <img src="../assets/seoul/Shrine.JPG">
+      
+              </div>
+
+              <div class="column">
+
+                <img src="../assets/seoul/Home.jpg">
+                <img src="../assets/seoul/Paint.jpg">
+              </div>
           </div>
         <footer id="footer">
             <p>© Audrey Nicole Kan</p>
