--- a/photography/seoul.html
+++ b/photography/seoul.html
@@ -18,8 +18,8 @@
                 <a href="iceland.html">Iceland</a>
                 <a href="quebec.html">Quebec</a>
                 <a href="newzealand.html">New Zealand</a>
-                <a href="england.html">England</a>
-                <a href="amsterdam.html">Amsterdam</a>
+                <a href="unitedkingdom.html">United Kingdom</a>
+                <a href="netherlands.html">Netherlands</a>
                 <a class="active"  href="seoul.html">Seoul</a>
                 <a href="hongkong.html">Hong Kong</a>
             </div>
@@ -39,19 +39,12 @@
             <div class="column">
               <img src="../assets/seoul/HiSeoul.jpg">
               <img src="../assets/seoul/Namsan.JPG">
-  
-
             </div>
-
             <div class="column">
-   
                 <img src="../assets/seoul/Skyline.JPG">
                 <img src="../assets/seoul/Shrine.JPG">
-      
               </div>
-
               <div class="column">
-
                 <img src="../assets/seoul/Home.jpg">
                 <img src="../assets/seoul/Paint.jpg">
               </div>
