--- a/photography/japan.html
+++ b/photography/japan.html
@@ -18,8 +18,8 @@
                 <a href="iceland.html">Iceland</a>
                 <a href="quebec.html">Quebec</a>
                 <a href="newzealand.html">New Zealand</a>
-                <a href="england.html">England</a>
-                <a href="amsterdam.html">Amsterdam</a>
+                <a href="unitedkingdom.html">United Kingdom</a>
+                <a href="netherlands.html">Netherlands</a>
                 <a href="seoul.html">Seoul</a>
                 <a href="hongkong.html">Hong Kong</a>
             </div>
@@ -63,7 +63,6 @@
                 <img src="../assets/japan/Daiba.png">
                 <img src="../assets/japan/Kimono.JPG">
                 <img src="../assets/japan/Banana.png">
-                
               </div>
           </div>
 
