--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
                 <a href="photography/iceland.html">Iceland</a>
                 <a href="photography/quebec.html">Quebec</a>
                 <a href="photography/newzealand.html">New Zealand</a>
-                <a href="photography/england.html">England</a>
-                <a href="photography/amsterdam.html">Amsterdam</a>
+                <a href="photography/unitedkingdom.html">United Kingdom</a>
+                <a href="photography/netherlands.html">Netherlands</a>
                 <a href="photography/seoul.html">Seoul</a>
                 <a href="photography/hongkong.html">Hong Kong</a>
             </div>
@@ -38,10 +38,10 @@
                     Owner of Studio Aud.<br>
                     San Francisco born and raised.
                 </p>
-                <small>This site holds a variety of content— both professional and personal— so you can learn more about
+                <!-- <small>This site holds a variety of content— both professional and personal— so you can learn more about
                     who I am and
-                    what I love to do ☻</small>
-                    <br><br>
+                    what I love to do ☻</small> -->
+                    <br>
                     <small>audreynicolekan@gmail.com</small><br>
                     <small>@oddreeezy</small><br>
                     <small>@studio.aud</small><br>
