--- a/photography/iceland.html
+++ b/photography/iceland.html
@@ -29,47 +29,32 @@
 </header>
 
 <body>
-    <div id="page-container">
-        <h1>Iceland</h1>
-        <p>2019</p>
+    <div id="gallery-container">
+        <div id="gallery-title">
+            <h1>Iceland</h1>
+            <p>2019</p>
+        </div>
+
         <div class="row">
             <div class="column">
-              <img src="">
-              <img src="">
-              <img src="">
-              <img src="">
-              <img src="">
-              <img src="">
-              <img src="">
+                <img src="../assets/iceland/WIndow.jpg">
+                <img src="../assets/iceland/Drive.jpg">
+                <img src="../assets/iceland/Hallgrims2.jpg">
             </div>
             <div class="column">
-                <img src="">
-                <img src="">
-                <img src="">
-                <img src="">
-                <img src="">
-                <img src="">
-                <img src="">
+                <img src="../assets/iceland/Landscape4.jpg">
+                <img src="../assets/iceland/SunVoyager.jpg">
+                <img src="../assets/iceland/Lava Tunnel.jpg">
+                <img src="../assets/iceland/Hallgrims.jpg">
             </div>
             <div class="column">
-                <img src="">
-                <img src="">
-                <img src="">
-                <img src="">
-                <img src="">
-                <img src="">
-                <img src="">
+                <img src="../assets/iceland/Landscape2.jpg">
+                <img src="../assets/iceland/Tunnel.jpg">
+                <img src="../assets/iceland/Glass.jpg">
+                <img src="../assets/iceland/Landscape.jpg">
+                
             </div>
-            <div class="column">
-                <img src="">
-                <img src="">
-                <img src="">
-                <img src="">
-                <img src="">
-                <img src="">
-                <img src="">
-            </div>
-          </div>
+        </div>
         <footer id="footer">
             <p>© Audrey Nicole Kan</p>
         </footer>
