--- a/photography/seoul.html
+++ b/photography/seoul.html
@@ -45,8 +45,8 @@
                 <img src="../assets/seoul/Shrine.JPG">
               </div>
               <div class="column">
-                <img src="../assets/seoul/Home.jpg">
-                <img src="../assets/seoul/Paint.jpg">
+                <img src="../assets/seoul/Home.JPG">
+                <img src="../assets/seoul/Paint.JPG">
               </div>
           </div>
         <footer id="footer">
