--- a/photography/quebec.html
+++ b/photography/quebec.html
@@ -27,49 +27,25 @@
 
     </div>
 </header>
-
 <body>
-    <div id="page-container">
-        <h1>Quebec</h1>
-        <p>2018</p>
+    <div id="gallery-container">
+        <div id="gallery-title">
+            <h1>Quebec</h1>
+            <p>2018</p>
+        </div>
+
         <div class="row">
             <div class="column">
-              <img src="">
-              <img src="">
-              <img src="">
-              <img src="">
-              <img src="">
-              <img src="">
-              <img src="">
+                <img src="../assets/quebec/Port.jpg">
             </div>
             <div class="column">
-                <img src="">
-                <img src="">
-                <img src="">
-                <img src="">
-                <img src="">
-                <img src="">
-                <img src="">
+                <img src="../assets/quebec/Clouds.jpg">
+                <img src="../assets/quebec/Stairs.jpg">
             </div>
             <div class="column">
-                <img src="">
-                <img src="">
-                <img src="">
-                <img src="">
-                <img src="">
-                <img src="">
-                <img src="">
+                <img src="../assets/quebec/Quebec.jpg">
             </div>
-            <div class="column">
-                <img src="">
-                <img src="">
-                <img src="">
-                <img src="">
-                <img src="">
-                <img src="">
-                <img src="">
-            </div>
-          </div>
+        </div>
         <footer id="footer">
             <p>© Audrey Nicole Kan</p>
         </footer>
