--- a/photography/unitedkingdom.html
+++ b/photography/unitedkingdom.html
@@ -30,7 +30,7 @@
 <body>
     <div id="gallery-container">
         <div id="gallery-title">
-            <h1>London, Hull, York, Leeds, Liverpool, Manchester, Newcastle and Edinburgh</h1>
+            <h1>England and Scotland</h1>
             <p>2017</p>
         </div>
 
