--- a/photography/sanfrancisco.html
+++ b/photography/sanfrancisco.html
@@ -20,7 +20,7 @@
                 <a href="newzealand.html">New Zealand</a>
                 <a href="unitedkingdom.html">United Kingdom</a>
                 <a href="netherlands.html">Netherlands</a>
-                <a class="active"  href="seoul.html">Seoul</a>
+                <a href="seoul.html">Seoul</a>
                 <a href="hongkong.html">Hong Kong</a>
             </div>
         </div>
@@ -28,48 +28,61 @@
     </div>
 </header>
 
+
 <body>
-    <div id="page-container">
-        <h1>San Francisco</h1>
-        <p>2013-2021</p>
+    <div id="gallery-container">
+        <div id="gallery-title">
+            <h1>San Francisco</h1>
+            <p>2013-2020</p>
+        </div>
+
         <div class="row">
             <div class="column">
-              <img src="">
-              <img src="">
-              <img src="">
-              <img src="">
-              <img src="">
-              <img src="">
-              <img src="">
+                <img src="../assets/sanfrancisco/TwinPeaks.JPG">
+                <img src="../assets/sanfrancisco/Night.png">
+                <img src="../assets/sanfrancisco/Plant.jpg">
+                <img src="../assets/sanfrancisco/OceanBeach2.jpg">
+                <img src="../assets/sanfrancisco/SutroBathSunset.jpg">
+                <img src="../assets/sanfrancisco/CityHall.jpg">
+                <img src="../assets/sanfrancisco/City.jpg">
+                <img src="../assets/sanfrancisco/GGB.png">
+                <img src="../assets/sanfrancisco/Confetti.jpg">
+                <img src="../assets/sanfrancisco/SandDollar.jpg">
+                <img src="../assets/sanfrancisco/GGB2.png">
+                <img src="../assets/sanfrancisco/ScenicDrive.jpg">
+                <img src="../assets/sanfrancisco/Goldsworthy.jpg">
             </div>
             <div class="column">
-                <img src="">
-                <img src="">
-                <img src="">
-                <img src="">
-                <img src="">
-                <img src="">
-                <img src="">
+                <img src="../assets/sanfrancisco/PaloAlto.jpg">
+                <img src="../assets/sanfrancisco/MTA.jpg">
+                <img src="../assets/sanfrancisco/FerryBuilding.jpg">
+                <img src="../assets/sanfrancisco/CableCar.jpg">
+                <img src="../assets/sanfrancisco/Sutro.jpg">
+                <img src="../assets/sanfrancisco/MandarinOriental.jpg">
+                <img src="../assets/sanfrancisco/JapaneseGarden.jpg">
+                <img src="../assets/sanfrancisco/Beach.jpg">
+                <img src="../assets/sanfrancisco/SutroBaths.jpg">
+                <img src="../assets/sanfrancisco/OceanBeach.jpg">
+                <img src="../assets/sanfrancisco/Plants.jpg">
+                <img src="../assets/sanfrancisco/SignShop.jpg">
+                <img src="../assets/sanfrancisco/Sunset.jpg">
+                <img src="../assets/sanfrancisco/CalFire.jpg">
             </div>
             <div class="column">
-                <img src="">
-                <img src="">
-                <img src="">
-                <img src="">
-                <img src="">
-                <img src="">
-                <img src="">
+                <img src="../assets/sanfrancisco/Holloway.jpg">
+                <img src="../assets/sanfrancisco/Smile.jpg">
+                <img src="../assets/sanfrancisco/SutroNight.jpg">
+                <img src="../assets/sanfrancisco/LandsEnd.jpg">
+                <img src="../assets/sanfrancisco/Bridge.jpg">
+                <img src="../assets/sanfrancisco/Bonfire.jpg">
+                <img src="../assets/sanfrancisco/Haight.jpg">
+                <img src="../assets/sanfrancisco/ColorFactory.jpg">
+                <img src="../assets/sanfrancisco/SutroSunset2.jpg">
+                <img src="../assets/sanfrancisco/FlowerHouse.jpg">
+                <img src="../assets/sanfrancisco/SutroSunset.jpg">
+                <img src="../assets/sanfrancisco/BatterySpencer.jpg">
             </div>
-            <div class="column">
-                <img src="">
-                <img src="">
-                <img src="">
-                <img src="">
-                <img src="">
-                <img src="">
-                <img src="">
-            </div>
-          </div>
+        </div>
         <footer id="footer">
             <p>© Audrey Nicole Kan</p>
         </footer>
