Revert "Update index.html"
This reverts commit 422fac95f80e06b30adcbf5199d6763d611daf27.

--- a/index.html
+++ b/index.html
@@ -41,17 +41,17 @@
         <div class="dropdown">
             <button class="dropbtn">Photography</button>
             <div class="dropdown-content">
-                <a href="photography/sanfrancisco">San Francisco</a>
-                <a href="photography/japan">Japan</a>
-                <a href="photography/seattle">Seattle</a>
-                <a href="photography/newyork">New York</a>
-                <a href="photography/iceland">Iceland</a>
-                <a href="photography/quebec">Quebec</a>
-                <a href="photography/newzealand">New Zealand</a>
-                <a href="photography/unitedkingdom">United Kingdom</a>
-                <a href="photography/netherlands">Netherlands</a>
-                <a href="photography/seoul">Seoul</a>
-                <a href="photography/hongkong">Hong Kong</a>
+                <a href="photography/sanfrancisco.html">San Francisco</a>
+                <a href="photography/japan.html">Japan</a>
+                <a href="photography/seattle.html">Seattle</a>
+                <a href="photography/newyork.html">New York</a>
+                <a href="photography/iceland.html">Iceland</a>
+                <a href="photography/quebec.html">Quebec</a>
+                <a href="photography/newzealand.html">New Zealand</a>
+                <a href="photography/unitedkingdom.html">United Kingdom</a>
+                <a href="photography/netherlands.html">Netherlands</a>
+                <a href="photography/seoul.html">Seoul</a>
+                <a href="photography/hongkong.html">Hong Kong</a>
             </div>
         </div>
 
